# RacketRhythm

./: CMakeLists.txt  LICENSE  README.md
Hardware/: README.md  Sensor Research.docx
RacketRhythm_V1.0/: README.md  RacketRhythm_V1.0  tempovolume
RacketRhythm_V1.0/include/: ALSACapture.h  ball_contact_count.h  contact_detector.h  tempo.h
RacketRhythm_V1.0/src/: ALSACapture.cpp  ball_contact_count.cpp  contact_detector.cpp  main.cpp  tempo.cpp
src/: CMakeLists.txt  README.md  init.sh
src/Contact_Detection/: CONTACT_DETECTOR  CONTACT_DETECTOR.cpp  CONTACT_DETECTOR.h  main.cpp
src/tests/: a.out
src/tests/classes/: GameRhythm  ball_contact_count.cpp  ball_contact_count.h  contact_detector.cpp  contact_detector.h  main.cpp  tempo.cpp  tempo.h
src/tests/spotifytest/: ALSACapture.cpp  ALSACapture.h  capture_and_playback  main.cpp
src/tests/tempotest/: CONTACT_DETECTOR.cpp  CONTACT_DETECTOR.h  class  classes  main.cpp  tempov2.cpp
